--- a/snake.html
+++ b/snake.html
@@ -13,13 +13,16 @@
 			<h1>Snake</h1>
 			<h3>Score: <span id="score">0</span></h3>
 			<canvas id="canvas" height="480" width="800">Your browser doesn't support canvas. :(</canvas>
-			<h3>How to play:</h3>
-			Use the arrow keys (or WASD) to move your snake around the area. Eat apples to get points, but don't crash into the walls or yourself.
-			<ul>
-				<li><strong>Red squares:</strong> Red squares are apples. They give you one point and make the snake longer.</li>
-				<li><strong>Yellow squares:</strong> Yellow squares are super apples, they give you five points and make the snake longer, but only stay in one spot for a short time.</li>
-				<li><strong>Orange and Blue squares:</strong> Portals! Go in one side and come out the other. Be careful, you keep going the same direction so don't go into the portal too close to a wall.</li>
-			</ul>
+			<div id="hiscoretable"></div>
+			<div>
+				<h3>How to play:</h3>
+				Use the arrow keys (or WASD) to move your snake around the area. Eat apples to get points, but don't crash into the walls or yourself.
+				<ul>
+					<li><strong>Red squares:</strong> Red squares are apples. They give you one point and make the snake longer.</li>
+					<li><strong>Yellow squares:</strong> Yellow squares are super apples, they give you five points and make the snake longer, but only stay in one spot for a short time.</li>
+					<li><strong>Orange and Blue squares:</strong> Portals! Go in one side and come out the other. Be careful, you keep going the same direction so don't go into the portal too close to a wall.</li>
+				</ul>
+			</div>
 		</div>
 		
 		<script type="text/javascript" src="./snake.js"></script>
